# GDFL

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md  build.py
FOR DEVELOPERS/: how to build seperate libraries.txt
src/: All.hpp  CMakeLists.txt  CommonDefs.hpp  Convert.cpp  Convert.hpp  Example.h  FFLResource.cpp  FFLResource.hpp  FFLWrapper.cpp  FFLWrapper.h  GDClassSTLConv.h  Main.cpp  Main.h  Mii.cpp  Mii.hpp  MiiResource.cpp  MiiResource.hpp  RegisterExtension.cpp  ZLibImpl.cpp  ZLibImpl.hpp
src/inflatecpp/: CMakeLists.txt  Crc32.fu  Decompressor.fu  README  decomp.py
src/kty/: CMakeLists.txt  conv-all.py  g1.cpp  g1.h  g1.ksy  g2.cpp  g2.h  g2.ksy  g3.cpp  g3.h  g3.ksy  g4.cpp  g4.h  g4.ksy  links.txt  mii_data.h
templates/: template.debug.gdextension.in  template.release.gdextension.in
testproj/: CPU_Displayette.ffsd  DFT_Cam.ffsd  DFT_Mirvi.ffsd  DFT_Sam.ffsd  GDFL.gdextension  GDFL.gdextension.uid  control.gd  control.gd.uid  control.tscn  default_bus_layout.tres  icon.svg.import  project.godot
testproj/.godot/: extension_list.cfg
testproj/.godot/editor/: control.tscn-editstate-e66311c87c39ec8c25379305b5ae724b.cfg  editor_layout.cfg  filesystem_cache10  project_metadata.cfg  script_editor_cache.cfg
testproj/.godot/imported/: Example.svg-66f6215e42a5e4720894a2e03bc7cced.ctex  Example.svg-66f6215e42a5e4720894a2e03bc7cced.md5
testproj/addons/gdfl/: GDFL.gdextension  GDFL.gdextension.uid  ffra_import.gd  ffra_import.gd.uid  ffsd_import.gd  ffsd_import.gd.uid  gdfl.gd  (+2 more)
testproj/icons/: Example.svg.import
(+5 files in other folders)
